<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Backlog</string>
    <string name="sample_backlog_item_text">Sample backlog item text that may get very long and span multiple lines</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add</string>
    <string name="add_item_dialog_title">New backlog item</string>

    <string name="in_progress_list_header">In progress:</string>
    <string name="backlog_list_header">Backlog:</string>
    <string name="delete">Delete</string>

    <string name="accessibility_drag">Drag handle - up or down</string>
    <string name="accessibility_item_options">Item options</string>
    <string name="edit">Edit</string>

    <string name="edit_item_dialog_title">Edit item</string>
    <string name="edit_item_title_hint">Enter item title</string>
</resources>
