<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/in_progress_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="96dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/in_progress_section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/in_progress_list_header"
            android:textSize="20sp"/>

        <ListView
            android:id="@+id/in_progress_list_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/backlog_item"
            />
    </LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/list_divider"
        android:layout_below="@id/in_progress_view_group"/>

    <LinearLayout
        android:id="@+id/backlog_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/list_divider"
        android:layout_above="@+id/add_row"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backlog_section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/backlog_list_header"
            android:textSize="20sp"/>

        <ListView
            android:id="@+id/backlog_list_view"
            android:scrollbars="vertical"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/backlog_item"/>
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/add_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/row_height"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        >

        <ImageView
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_action_new"
            android:contentDescription="@string/add_item"
            />

    </RelativeLayout>


</RelativeLayout>
